  common.ui.printing.* deleted
  EntityTableModel.removeAll() removed, code moved to clear()
  IEntityDbRemote, all methods removed, apparently they were unnecessary
  EntityDbConnection, minor changes in throws clauses
  EntityDbRemoteAdapter, minor changes in throws clauses
  IEntityDb.delete() argument is now List<EntityKey> instead of List<Entity>
  EntityUtil.getWhereCondition() overloaded, ValueProvider interface introduced
  I prefix removed from interface names
  PropertyCriteria now adds paranthesis around in conditions, fixes bug due to 1000 item in list limit
  ComboBoxPropertyLink now handles PropertyComboBoxModel.isNullValueSelected()
  EntityLookupField refactored a bit
  EntityLookupModel.getEntityID() added and used
  EntityDbProvider, EntityDbLocalProvider and EntityDbProviderFactory moved to framework.db.provider
  EntityModel.uiSetValue() renamed to setValue()
  EntityModel.setValue() renamed to setPropertyValue()
  EntityModel.addDetailModels() now checks if the detail models are based on valid foreign keys
  Property.maxLength field added
  EntityUiUtil.createTextField() now uses the above field to restrict the allowed number of characters in text fields
  UiUtil.makeUpperCase() overloaded for TextFieldPlus
  Property, replaced constructor arguments with chained method calls
  EntityProxy.addEntityProxy() renamed to setEntityProxy()
  EntityRepository.getDatabaseProperties() implemented with ListIterator instead of HashSet
  LoginPanel, initial focus bug in linux finally fixed
  EntityModel.addDetailModels() doesn't check if the detail models are based on valid foreign keys anymore
  EntityLookupModel.searchStringRepresentsSelected() now returns true for zero selected entities and an empty search string
  EntityPropertyEditor.getValue(), didn't take into consideration that the input field could be a EntityLookupField
  Property.propertyID, propertyType and caption fields privatized
  EntityRepository.initialize() renamed to define()